# git_guardrails

./: .editorconfig  .gitignore  LICENSE  Makefile  Pipfile  README.md  codecov.yml  conf.py  git_guardrails.code-workspace  index.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  flake8.yml  pex.yml  publish-codecov.yml  python-package.yml
src/git_guardrails/: __main__.py  command_line.py  coroutine.py  errors.py  git_repo.py  git_utils.py
src/git_guardrails/cli/: color.py  tty.py  ux.py  value_format.py
src/git_guardrails/cli/logging/: __init__.py  colored_formatter.py
src/git_guardrails/validate/: __init__.py  cli_options.py  options.py
src/git_guardrails_test_helpers/: cliux_test_utils.py  git_test_utils.py  logger_test_utils.py
tests/: test_calc.py  test_coroutine.py  test_errors.py  test_git_test_utils.py  test_git_utils.py  test_use_in_non_git_directory.py  test_validate.py
tests/cli/: test_color.py  test_logging.py  test_root_command.py  test_tty.py  test_ux.py  test_value_format.py
tests/helpers/: git_test_utils.py
tests/scenarios/: test_need_to_fetch.py  test_too_many_local_commits.py
tests/validation/: test_cli_options.py  test_options.py
