[metadata]
name = git_guardrails
version = 0.0.1
author = Mike North
author_email = michael.l.north@gmail.com
description = A CLI for providing extra guidance around Git and Pull Request workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
  Bug Tracker = https://github.com/pypa/sampleproject/issues

classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD-2-Clause License
  Operating System :: OS Independent

[options.entry_points]
console_scripts =
    git_guardrails = git_guardrails.command_line:main


[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[pytest]
norecursedirs=tests/helpers

[flake8]
ignore = D203,E712
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10
max-line-length = 127
statistics = True
disallow-untyped-defs = True
disallow-untyped-calls = True

[mypy-git.*]
ignore_missing_imports = True
